# argos-quest

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
application/: bootstrap.py
application/services/: dataframe_service.py  scraper_registry.py  statistics_service.py  synchronization_service.py
application/use_cases/: get_all_theses_use_case.py  scrape_inria_use_case.py
config/: settings.py
domain/entities/: application.py  laboratory.py  thesis.py
domain/enums/: source.py
domain/repositories/: thesis_repository.py
infrastructure/database/: connection.py  initializer.py  migration_runner.py  schema.py  unit_of_work.py
infrastructure/database/migrations/: 001_create_schema_version.sql  001_initial_schema.sql  002_create_thesis.sql
infrastructure/http/: http_client.py
infrastructure/repositories/: duckdb_thesis_repository.py
infrastructure/scrapers/: base_scraper.py  inria_scraper.py
tests/: test_01.py  test_database.py  test_inria_scraper.py  test_repository.py  test_scrape_inria_use_case.py
ui/components/: alerts.py  buttons.py  cards.py  charts.py  filters.py  layout.py  metrics.py  search.py  search_box.py  sidebar.py  tables.py  thesis_table.py
ui/pages/: analytics.py  dashboard.py  settings.py  sources.py  theses.py
