[project]
name = "argos-quest"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "duckdb>=1.5.4",
    "loguru>=0.7.3",
    "lxml>=6.1.1",
    "plotly>=6.8.0",
    "polars>=1.42.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "selectolax>=0.4.10",
    "streamlit>=1.58.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
